--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ fastparquet = "^2024.2.0"
 loguru = "^0.7.2"
 openpyxl = "^3.1.2"
 schedule = "^1.2.1"
+fastapi = "^0.110.2"
+uvicorn = "^0.29.0"
+faker = "^24.14.0"
 
 
 [build-system]
